@@ -1,6 +1,6 @@
 logfile = "./frontik_test.log"
 loglevel = "debug"
-host = "localhost"
+host = "0.0.0.0"
 daemonize = False
 debug = True
 suppressed_loggers = ["tornado.curl_httpclient"]
