@@ -1,8 +1,6 @@
 logfile='./frontik_test.log'
 loglevel='debug'
-
-host = "0.0.0.0"
-
+host='0.0.0.0'
 daemonize=False
 debug = False
 debug_login = 'user'
